AC_INIT([pargen], [1.0])

PKG_CHECK_MODULES(THIS, [libmary-1.0])
AC_SUBST(THIS_CFLAGS)
AC_SUBST(THIS_LIBS)

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_CXX
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
#LT_INIT(win32-dll)

AC_LANG_CPLUSPLUS


tmp_cxxflags="$CXXFLAGS"

CXXFLAGS="$CXXFLAGS -Wextra"
AC_MSG_CHECKING([whether CXX supports -Wextra])
AC_COMPILE_IFELSE(
    [AC_LANG_PROGRAM([])],
    [AC_MSG_RESULT([yes])]
        [AM_CFLAGS="$AM_CFLAGS -Wextra"]
        [AM_CXXFLAGS="$AM_CXXFLAGS -Wextra"],
    [AC_MSG_RESULT([no])]
        [AM_CFLAGS="$AM_CFLAGS"]
        [AM_CXXFLAGS="$AM_CXXFLAGS"])

CXXFLAGS="$tmp_cxxflags -std=gnu++11"
AC_MSG_CHECKING([whether CXX supports -std=gnu++11])
AC_COMPILE_IFELSE(
    [AC_LANG_PROGRAM([])],
    [AC_MSG_RESULT([yes])]
        [AM_CXXFLAGS="$AM_CXXFLAGS -std=gnu++11"],
    [AC_MSG_RESULT([no])]
        AC_MSG_CHECKING([whether CXX supports -std=c++11])
        CXXFLAGS="$tmp_cxxflags -std=c++11"
        AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
                          [AC_MSG_RESULT([yes])]
                              [AM_CXXFLAGS="$AM_CFLAGS -std=c++11"],
                          [AC_MSG_RESULT([no])]
                              [AM_CXXFLAGS="$AM_CFLAGS -std=gnu++0x"]))

CXXFLAGS="$tmp_cxxflags"
AC_SUBST([AM_CFLAGS])
AC_SUBST([AM_CXXFLAGS])


AC_CONFIG_FILES([Makefile
		 pargen/Makefile
		 pargen-1.0.pc])
AC_OUTPUT

